# Video_Editor_MCP

./: .env.example  README.md  pyproject.toml
src/video_editor/: __init__.py  __main__.py  config.py  newserver.py  security.py  server.py
